fixed contrast

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ input:focus {
 }
 
 .footer a {
-    color: #999999;
+    color: #444444;
     text-decoration: none;
     margin-left: 8px;
 }
